<resources>
    <string name="app_name">LattePOS</string>
    <!--注册-->
    <string name="pos_sign_up">注册</string>
    <string name="pos_sign_up_name">姓名</string>
    <string name="pos_sign_up_email">邮箱</string>
    <string name="pos_sign_up_phone">手机号码</string>
    <string name="pos_sign_up_psw">密码</string>
    <string name="pos_sign_up_psw_again">重复密码</string>
    <string name="pos_sign_up_in">已经注册了? 请登录</string>
    <!--登录-->
    <string name="pos_sign_in">登录</string>
    <string name="pos_sign_in_up">还没有账户？现在注册吧</string>
    <string name="pos_sign_in_fa_weixin">{fa-weixin}</string>

    <!--主页-->
    <string name="index_scan">{icon-scan}</string>
    <string name="index_message">{fa-bullhorn}</string>
    <string name="index_search">搜索</string>
    <!--分类-->
    <string name="sort_bar_text">分类</string>
</resources>
